force-app/main/default/objects/DJ_Resource__c/DJ_Resource__c.object-meta.xml
<CustomObject>
    <label>DJ_Resource</label>
    <nameField>
        <displayFormat>DJ-{0000}</displayFormat>
        <label>DJ_Resource ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DJ_Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>