force-app/main/default/objects/DJ_Resource__c/fields/Available_from_Date__c.field-meta.xml
<CustomField>
    <fullName>Available_from_Date__c</fullName>
    <label>Available from Date</label>
    <type>Date</type>
</CustomField>