force-app/main/default/objects/DJ_Resource__c/fields/Primary_Salesforce_Role__c.field-meta.xml
<CustomField>
    <fullName>Primary_Salesforce_Role__c</fullName>
    <label>Primary Salesforce Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>