force-app/main/default/objects/DJ_Resource__c/fields/Resource_Description__c.field-meta.xml
<CustomField>
    <fullName>Resource_Description__c</fullName>
    <label>Resource Description</label>
    <type>TextArea</type>
</CustomField>